# oars-colab-mvp

./: .gitignore  COLAB_TREINO_REAL.txt  KAGGLE_PHASE1_COMPLETO.txt  Makefile  NEXT_ACTIONS.md  README.md  SELF_EVOLVE_PLAN.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
data/: README.md
notebooks/: oars_colab_mvp.ipynb
scripts/: decide_phase1.py  download_minif2f.py  install_lean.py  phase1_common.py  plot_results.py  prepare_minif2f.py  run_ablation.py  run_full_pipeline.py  run_kaggle_phase1.py  run_m1.py  run_m2.py  run_m3.py  run_m4.py  run_phase1.py  run_phase1_roadmap.py  run_putnam_passk.py  train_autoencoder.py  train_real_model.py  validate_dataset.py
src/oars_mvp/: __init__.py  autoencoder.py  cli.py  dataset.py  model.py  proof_generator.py  stats.py  train.py  verifier.py
tests/: conftest.py  test_dataset.py  test_training_smoke.py
