[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oars-colab-mvp"
version = "0.2.0"
description = "Colab MVP for OARS ablation experiments"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2.0",
  "numpy>=1.26.0",
  "pyyaml>=6.0.1",
  "tqdm>=4.66.0",
  "pandas>=2.2.0",
  "matplotlib>=3.8.0",
  "wandb>=0.17.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
oars-mvp = "oars_mvp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]